--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"..\")"
+    "import os\n",
+    "import dotenv"
    ]
   },
   {
@@ -16,16 +17,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from DBCompanion.report import Report"
+    "sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from secret_manager import OPEN_AI_KEY"
+    "dotenv.load_dotenv()"
    ]
   },
   {
@@ -34,7 +46,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report = Report(name=\"Sri Lanka Food Price Report\",save_location=\".\", api_key=OPEN_AI_KEY)"
+    "API_KEY = os.environ[\"OPENAI_KEY\"]\n",
+    "\n",
+    "USERNAME = os.environ[\"USERNAME\"]\n",
+    "PASSWORD = os.environ[\"PASSWORD\"]\n",
+    "HOST = os.environ[\"HOST\"]\n",
+    "PORT = int(os.environ[\"PORT\"])\n",
+    "DATABASE = os.environ[\"DATABASE\"]"
    ]
   },
   {
@@ -43,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_source_database(username='root',password='11111111', host='localhost', port=3306, database='toy_db')"
+    "from DBCompanion.report import Report"
    ]
   },
   {
@@ -52,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_instruction('example_instruction',\"\")"
+    "report = Report(name=\"Sri Lanka Food Price Report\",save_directory=\"SampleReport\", api_key=API_KEY)"
    ]
   },
   {
@@ -61,7 +79,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_step(\"How many different categories are there?\")"
+    "report.add_source_database(\n",
+    "    username=USERNAME, \n",
+    "    password=PASSWORD, \n",
+    "    host=HOST, \n",
+    "    port=PORT, \n",
+    "    database=DATABASE\n",
+    "    )"
    ]
   },
   {
@@ -70,7 +94,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_step(\"What is the maxium and minimum dates in dataframe?\")"
+    "example_instructions = \"\"\"\n",
+    "Valid code generattion:\n",
+    "```python \n",
+    "def plot_yearly_price_for_category_cereals_and_tubers(conn):\n",
+    "    import pandas as pd\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    \n",
+    "    query = \"SELECT YEAR(`date`) AS year, AVG(`price`) AS avg_price FROM `sri_lanka_food_prices` WHERE `category` = 'cereals and tubers' GROUP BY YEAR(`date`)\"\n",
+    "    df = pd.read_sql_query(query, conn)\n",
+    "    \n",
+    "    plt.plot(df['year'], df['avg_price'])\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Average Price')\n",
+    "    plt.title('Yearly Price for Category: Cereals and Tubers')\n",
+    "    return plt```\n",
+    "\n",
+    "Invalid code generation:\n",
+    "```python \n",
+    "def plot_yearly_price_for_category_cereals_and_tubers(conn):\n",
+    "    import pandas as pd\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    \n",
+    "    query = \"SELECT YEAR(`date`) AS year, AVG(`price`) AS avg_price FROM `sri_lanka_food_prices` WHERE `category` = 'cereals and tubers' GROUP BY YEAR(`date`)\"\n",
+    "    df = pd.read_sql_query(query, conn)\n",
+    "    \n",
+    "    plt.plot(df['year'], df['avg_price'])\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Average Price')\n",
+    "    plt.title('Yearly Price for Category: Cereals and Tubers')\n",
+    "    plt.show()```\n",
+    "\"\"\""
    ]
   },
   {
@@ -79,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_step(\"How many records per year?\")"
+    "report.add_instruction('example_instruction',example_instructions)"
    ]
   },
   {
@@ -88,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_step(\"Plot price change of category 'cereals and tubers'\")"
+    "report.add_step(\"How many different categories are there?\")"
    ]
   },
   {
@@ -97,26 +151,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.add_step(\"Plot monthly price change for the category 'cereals and tubers' for each year\")"
+    "report.add_step(\"How many records per year? plot using bar graph.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.add_step(\"Plot yearly average price of 'cereals and tubers'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.add_step(\"Plot monthly % price change for the category 'cereals and tubers' for year 2017\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Compiling report... :   0%|          | 0/5 [00:00<?, ?it/s]"
+      "Compiling report... :   0%|          | 0/4 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Compiling report... : 100%|██████████| 5/5 [00:31<00:00,  6.26s/it]\n"
+      "Compiling report... : 100%|██████████| 4/4 [00:37<00:00,  9.38s/it]\n"
      ]
     }
    ],
@@ -126,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
