--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -2,27 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dbcompanion\n",
+      "  Downloading dbcompanion-0.0.7-py3-none-any.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: markdown>=3.5.2 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (3.5.2)\n",
+      "Requirement already satisfied: openai in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (1.8.0)\n",
+      "Requirement already satisfied: pandas>=1.5.1 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (1.5.3)\n",
+      "Collecting pydantic-settings>=2 (from dbcompanion)\n",
+      "  Downloading pydantic_settings-2.1.0-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: pydantic>=2 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (2.4.2)\n",
+      "Requirement already satisfied: pymysql>=1.1.0 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (1.1.0)\n",
+      "Requirement already satisfied: tqdm>=4.66.1 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (4.66.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/homebrew/lib/python3.11/site-packages (from pandas>=1.5.1->dbcompanion) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.11/site-packages (from pandas>=1.5.1->dbcompanion) (2023.3.post1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /opt/homebrew/lib/python3.11/site-packages (from pandas>=1.5.1->dbcompanion) (1.25.2)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in /opt/homebrew/lib/python3.11/site-packages (from pydantic>=2->dbcompanion) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.10.1 in /opt/homebrew/lib/python3.11/site-packages (from pydantic>=2->dbcompanion) (2.10.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in /opt/homebrew/lib/python3.11/site-packages (from pydantic>=2->dbcompanion) (4.8.0)\n",
+      "Requirement already satisfied: python-dotenv>=0.21.0 in /opt/homebrew/lib/python3.11/site-packages (from pydantic-settings>=2->dbcompanion) (1.0.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (3.7.1)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (0.25.1)\n",
+      "Requirement already satisfied: sniffio in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (1.3.0)\n",
+      "Requirement already satisfied: idna>=2.8 in /opt/homebrew/lib/python3.11/site-packages (from anyio<5,>=3.5.0->openai->dbcompanion) (3.4)\n",
+      "Requirement already satisfied: certifi in /opt/homebrew/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->dbcompanion) (2023.7.22)\n",
+      "Requirement already satisfied: httpcore in /opt/homebrew/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->dbcompanion) (1.0.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.11/site-packages (from python-dateutil>=2.8.1->pandas>=1.5.1->dbcompanion) (1.16.0)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /opt/homebrew/lib/python3.11/site-packages (from httpcore->httpx<1,>=0.23.0->openai->dbcompanion) (0.14.0)\n",
+      "Downloading dbcompanion-0.0.7-py3-none-any.whl (10 kB)\n",
+      "Downloading pydantic_settings-2.1.0-py3-none-any.whl (11 kB)\n",
+      "Installing collected packages: pydantic-settings, dbcompanion\n",
+      "Successfully installed dbcompanion-0.0.7 pydantic-settings-2.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install dbcompanion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
     "import dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append(\"..\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +67,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,21 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Compiling report... :   0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Compiling report... : 100%|██████████| 4/4 [00:37<00:00,  9.38s/it]\n"
+      "Compiling report... : 100%|██████████| 4/4 [00:38<00:00,  9.67s/it]\n"
      ]
     }
    ],
@@ -198,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
