--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -2,63 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting dbcompanion\n",
-      "  Downloading dbcompanion-0.0.7-py3-none-any.whl.metadata (2.1 kB)\n",
-      "Requirement already satisfied: markdown>=3.5.2 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (3.5.2)\n",
-      "Requirement already satisfied: openai in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (1.8.0)\n",
-      "Requirement already satisfied: pandas>=1.5.1 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (1.5.3)\n",
-      "Collecting pydantic-settings>=2 (from dbcompanion)\n",
-      "  Downloading pydantic_settings-2.1.0-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: pydantic>=2 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (2.4.2)\n",
-      "Requirement already satisfied: pymysql>=1.1.0 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (1.1.0)\n",
-      "Requirement already satisfied: tqdm>=4.66.1 in /opt/homebrew/lib/python3.11/site-packages (from dbcompanion) (4.66.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/homebrew/lib/python3.11/site-packages (from pandas>=1.5.1->dbcompanion) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.11/site-packages (from pandas>=1.5.1->dbcompanion) (2023.3.post1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /opt/homebrew/lib/python3.11/site-packages (from pandas>=1.5.1->dbcompanion) (1.25.2)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in /opt/homebrew/lib/python3.11/site-packages (from pydantic>=2->dbcompanion) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.10.1 in /opt/homebrew/lib/python3.11/site-packages (from pydantic>=2->dbcompanion) (2.10.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in /opt/homebrew/lib/python3.11/site-packages (from pydantic>=2->dbcompanion) (4.8.0)\n",
-      "Requirement already satisfied: python-dotenv>=0.21.0 in /opt/homebrew/lib/python3.11/site-packages (from pydantic-settings>=2->dbcompanion) (1.0.0)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (3.7.1)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (1.9.0)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (0.25.1)\n",
-      "Requirement already satisfied: sniffio in /opt/homebrew/lib/python3.11/site-packages (from openai->dbcompanion) (1.3.0)\n",
-      "Requirement already satisfied: idna>=2.8 in /opt/homebrew/lib/python3.11/site-packages (from anyio<5,>=3.5.0->openai->dbcompanion) (3.4)\n",
-      "Requirement already satisfied: certifi in /opt/homebrew/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->dbcompanion) (2023.7.22)\n",
-      "Requirement already satisfied: httpcore in /opt/homebrew/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->dbcompanion) (1.0.1)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.11/site-packages (from python-dateutil>=2.8.1->pandas>=1.5.1->dbcompanion) (1.16.0)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /opt/homebrew/lib/python3.11/site-packages (from httpcore->httpx<1,>=0.23.0->openai->dbcompanion) (0.14.0)\n",
-      "Downloading dbcompanion-0.0.7-py3-none-any.whl (10 kB)\n",
-      "Downloading pydantic_settings-2.1.0-py3-none-any.whl (11 kB)\n",
-      "Installing collected packages: pydantic-settings, dbcompanion\n",
-      "Successfully installed dbcompanion-0.0.7 pydantic-settings-2.1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip3 install dbcompanion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import dotenv"
+    "# !pip3 install dbcompanion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import dotenv\n",
+    "\n",
+    "sys.path.append(\"../src/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +33,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from DBCompanion.report import Report"
+    "from dbcompanion.report import Report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,24 +176,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Compiling report... : 100%|██████████| 4/4 [00:38<00:00,  9.67s/it]\n"
+      "Compiling report... :   0%|          | 0/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Compiling report... : 100%|██████████| 4/4 [00:44<00:00, 11.03s/it]\n"
      ]
     }
    ],
    "source": [
-    "report.compile_report(force_execute_steps=True)"
+    "report.compile_report()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
